--- a/.eslintrc
+++ b/.eslintrc
@@ -9,8 +9,10 @@
     "es6": true
   },
   "extends": [
+    "airbnb-base",
     "eslint:recommended",
     "plugin:react/recommended",
+    "plugin:@typescript-eslint/recommended",
     "plugin:@typescript-eslint/eslint-recommended",
     "prettier",
     "plugin:prettier/recommended"
@@ -24,30 +26,17 @@
     "ecmaFeatures": {
       "jsx": true
     },
-    "ecmaVersion": 2018,
-    "sourceType": "module",
-    "project": "./tsconfig.json"
+    "ecmaVersion": 2018
   },
   "plugins": ["react", "@typescript-eslint", "prettier"],
   "rules": {
-    "prettier/prettier": [
-      "error",
-      {
-        "bracketSpacing": true,
-        "jsxBracketSameLine": false,
-        "printWidth": 90,
-        "semi": true,
-        "singleQuote": true,
-        "tabWidth": 4,
-        "trailingComma": "es5",
-        "useTabs": true,
-        "overrides": [
-          {
-            "files": "{.prettierrc,.watchmanconfig,.ember-cli}",
-            "options": {"parser": "json"}
-          }
-        ]
-      }
-    ]
+    "@typescript-eslint/explicit-function-return-type": "off",
+    "import/no-unresolved": "off",
+    "import/extensions": "off",
+    "import/prefer-default-export": "off",
+    "no-console": "off",
+    "class-methods-use-this": "off",
+    "no-continue": "off",
+    "linebreak-style": "off"
   }
 }
