--- a/package.json
+++ b/package.json
@@ -1,36 +1,72 @@
 {
   "name": "modmail-web-ui",
   "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.1.1",
-    "@testing-library/react": "^10.0.1",
+  "description": "Modmail Web interface",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Floor-Gang/modmail-web-ui"
+  },
+  "license": "GPL-3.0",
+  "author": {
+    "name": "Devin Mitchell",
+    "email": "devin.mitchell@integrated-data.com"
+  },
+  "keywords": [
+    "typescript",
+    "react",
+    "modmail",
+    "floorgang",
+    "pewdiepie"
+  ],
+  "devDependencies": {
     "@testing-library/user-event": "^10.0.0",
+    "@types/animejs": "^3.1.2",
+    "@types/axios": "^0.14.0",
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/react-router-dom": "^5.1.7",
     "@typescript-eslint/eslint-plugin": "^2.24.0",
     "@typescript-eslint/parser": "^2.24.0",
+    "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-prettier": "^6.10.0",
+    "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.18.3",
+    "node-sass": "^4.14.1",
     "prettier": "^1.19.1",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
     "typescript": "3.8.3"
+  },
+  "dependencies": {
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.56",
+    "@testing-library/jest-dom": "^5.1.1",
+    "@testing-library/react": "^10.0.1",
+    "animejs": "^3.2.1",
+    "axios": "^0.19.2",
+    "clsx": "^1.1.1",
+    "history": "^4.10.1",
+    "i18next": "^19.8.4",
+    "lodash": "^4.17.20",
+    "luxon": "^1.25.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-helmet": "^6.0.0",
+    "react-i18next": "^11.8.5",
+    "react-router-dom": "^5.2.0",
+    "unstated-next": "^1.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
     "lint": "eslint --ext .js,.jsx,.ts,.tsx src/",
-    "lint:fix": "eslint --ext .js,.jsx,.ts,.tsx src/ --fix"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
+    "lint:fix": "eslint --ext .js,.jsx,.ts,.tsx src/ --fix",
+    "prettier": "prettier --write \"./src/**/*.{ts,tsx}\"",
+    "postinstall": "node ./scripts/postinstall.js"
   },
   "browserslist": {
     "production": [
