--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
     "@testing-library/user-event": "^10.0.0",
     "@types/animejs": "^3.1.2",
     "@types/axios": "^0.14.0",
-    "@types/jest": "^24.0.0",
-    "@types/node": "^12.0.0",
-    "@types/react": "^16.9.0",
-    "@types/react-dom": "^16.9.0",
+    "@types/jest": "^26.0.20",
+    "@types/node": "^14.14.20",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.7",
     "@typescript-eslint/eslint-plugin": "^2.24.0",
     "@typescript-eslint/parser": "^2.24.0",
@@ -35,26 +35,27 @@
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.18.3",
     "node-sass": "^4.14.1",
-    "prettier": "^1.19.1",
-    "react-scripts": "4.0.1",
-    "typescript": "3.8.3"
+    "prettier": "^2.2.1",
+    "react-scripts": "^4.0.1",
+    "typescript": "^4.1.3"
   },
   "dependencies": {
-    "@material-ui/core": "^4.11.0",
-    "@material-ui/icons": "^4.9.1",
-    "@material-ui/lab": "^4.0.0-alpha.56",
-    "@testing-library/jest-dom": "^5.1.1",
-    "@testing-library/react": "^10.0.1",
+    "@material-ui/core": "^4.11.2",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.57",
+    "@testing-library/jest-dom": "^5.11.8",
+    "@testing-library/react": "^11.2.3",
     "animejs": "^3.2.1",
-    "axios": "^0.19.2",
+    "axios": "^0.21.1",
     "clsx": "^1.1.1",
     "history": "^4.10.1",
     "i18next": "^19.8.4",
+    "i18next-http-backend": "^1.0.21",
     "lodash": "^4.17.20",
     "luxon": "^1.25.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-helmet": "^6.0.0",
+    "react-helmet": "^6.1.0",
     "react-i18next": "^11.8.5",
     "react-router-dom": "^5.2.0",
     "unstated-next": "^1.1.0"
