--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -23,22 +23,23 @@ jobs:
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
 
-      - name: Cache node_modules
+      - name: Cache node modules
         uses: actions/cache@v2
         env:
-          cache-name: node_modules-cache
+          cache-name: cache-node-modules
         with:
+          # npm cache files are stored in `~/.npm` on Linux/macOS
           path: ~/.npm
           key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/yarn.lock') }}
-            restore-keys: |
-              ${{ runner.os }}-build-${{ env.cache-name }}-
-              ${{ runner.os }}-build-
-              ${{ runner.os }}-
+          restore-keys: |
+            ${{ runner.os }}-build-${{ env.cache-name }}-
+            ${{ runner.os }}-build-
+            ${{ runner.os }}-
 
       - name: install deps and build
-          run: yarn install --frozen-lockfile
-          env:
-            NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
+        run: yarn install --frozen-lockfile
+        env:
+          NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
 
       - run: yarn build --if-present
 
