--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "node-sass": "^4.14.1",
     "prettier": "^2.2.1",
     "react-scripts": "^4.0.1",
-    "typescript": "^4.1.3"
+    "typescript": "^4.1.3",
+    "cra-bundle-analyzer": "^0.1.0"
   },
   "dependencies": {
     "@material-ui/core": "^4.11.2",
@@ -67,6 +68,7 @@
     "lint": "eslint --ext .js,.jsx,.ts,.tsx src/",
     "lint:fix": "eslint --ext .js,.jsx,.ts,.tsx src/ --fix",
     "prettier": "prettier --write \"./src/**/*.{ts,tsx}\"",
+    "profile": "npx cra-bundle-analyzer",
     "postinstall": "node ./scripts/postinstall.js"
   },
   "browserslist": {
