--- a/package.json
+++ b/package.json
@@ -1,66 +1,20 @@
 {
-  "name": "modmail-web-ui",
-  "version": "0.1.0",
+  "name": "modmail-web",
+  "version": "0.1.1",
   "description": "Modmail Web interface",
   "repository": {
     "type": "git",
-    "url": "https://github.com/Floor-Gang/modmail-web-ui"
+    "url": "https://github.com/Floor-Gang/modmail-web"
   },
+  "author": "Floor Gang <https://github.com/Floor-Gang>",
   "license": "GPL-3.0",
-  "author": {
-    "name": "Devin Mitchell",
-    "email": "devin.mitchell@integrated-data.com"
-  },
   "keywords": [
     "typescript",
     "react",
     "modmail",
-    "floorgang",
+    "floor-gang",
     "pewdiepie"
   ],
-  "devDependencies": {
-    "@testing-library/user-event": "^10.0.0",
-    "@types/animejs": "^3.1.2",
-    "@types/axios": "^0.14.0",
-    "@types/jest": "^26.0.20",
-    "@types/node": "^14.14.20",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
-    "@types/react-router-dom": "^5.1.7",
-    "@typescript-eslint/eslint-plugin": "^2.24.0",
-    "@typescript-eslint/parser": "^2.24.0",
-    "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-config-prettier": "^6.10.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-prettier": "^3.1.2",
-    "eslint-plugin-react": "^7.18.3",
-    "node-sass": "^4.14.1",
-    "prettier": "^2.2.1",
-    "react-scripts": "^4.0.1",
-    "typescript": "^4.1.3",
-    "cra-bundle-analyzer": "^0.1.0"
-  },
-  "dependencies": {
-    "@material-ui/core": "^4.11.2",
-    "@material-ui/icons": "^4.11.2",
-    "@material-ui/lab": "^4.0.0-alpha.57",
-    "@testing-library/jest-dom": "^5.11.8",
-    "@testing-library/react": "^11.2.3",
-    "animejs": "^3.2.1",
-    "axios": "^0.21.1",
-    "clsx": "^1.1.1",
-    "history": "^4.10.1",
-    "i18next": "^19.8.4",
-    "i18next-http-backend": "^1.0.21",
-    "lodash": "^4.17.20",
-    "luxon": "^1.25.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-helmet": "^6.1.0",
-    "react-i18next": "^11.8.5",
-    "react-router-dom": "^5.2.0",
-    "unstated-next": "^1.1.0"
-  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -82,5 +36,49 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@testing-library/user-event": "^10.0.0",
+    "@types/animejs": "^3.1.2",
+    "@types/axios": "^0.14.0",
+    "@types/jest": "^26.0.20",
+    "@types/node": "^14.14.20",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
+    "@types/react-router-dom": "^5.1.7",
+    "@typescript-eslint/eslint-plugin": "^2.24.0",
+    "@typescript-eslint/parser": "^2.24.0",
+    "cra-bundle-analyzer": "^0.1.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-prettier": "^6.10.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-plugin-react": "^7.18.3",
+    "node-sass": "^4.14.1",
+    "prettier": "^2.2.1",
+    "react-scripts": "^4.0.1",
+    "typescript": "^4.1.3"
+  },
+  "dependencies": {
+    "@material-ui/core": "^4.11.2",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.57",
+    "@testing-library/jest-dom": "^5.11.8",
+    "@testing-library/react": "^11.2.3",
+    "animejs": "^3.2.1",
+    "axios": "^0.21.1",
+    "clsx": "^1.1.1",
+    "history": "^4.10.1",
+    "i18next": "^19.8.4",
+    "i18next-http-backend": "^1.0.21",
+    "lodash": "^4.17.20",
+    "luxon": "^1.25.0",
+    "modmail-types": "github:Floor-Gang/modmail-types",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0",
+    "react-i18next": "^11.8.5",
+    "react-router-dom": "^5.2.0",
+    "unstated-next": "^1.1.0"
   }
 }
