--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "type": "git",
     "url": "https://github.com/Floor-Gang/modmail-web"
   },
+  "homepage": "https://modmail.pewdiemc.com/",
   "author": "Floor Gang <https://github.com/Floor-Gang>",
   "license": "GPL-3.0",
   "keywords": [
@@ -17,6 +18,7 @@
   ],
   "scripts": {
     "start": "react-scripts start",
+    "serve": "serve -s ./build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "lint": "eslint --ext .js,.jsx,.ts,.tsx src/",
@@ -57,6 +59,7 @@
     "node-sass": "^4.14.1",
     "prettier": "^2.2.1",
     "react-scripts": "^4.0.1",
+    "serve": "^11.3.2",
     "typescript": "^4.1.3"
   },
   "dependencies": {
@@ -79,6 +82,19 @@
     "react-helmet": "^6.1.0",
     "react-i18next": "^11.8.5",
     "react-router-dom": "^5.2.0",
+    "web-vitals": "^0.2.4",
+    "workbox-background-sync": "^5.1.3",
+    "workbox-broadcast-update": "^5.1.3",
+    "workbox-cacheable-response": "^5.1.3",
+    "workbox-core": "^5.1.3",
+    "workbox-expiration": "^5.1.3",
+    "workbox-google-analytics": "^5.1.3",
+    "workbox-navigation-preload": "^5.1.3",
+    "workbox-precaching": "^5.1.3",
+    "workbox-range-requests": "^5.1.3",
+    "workbox-routing": "^5.1.3",
+    "workbox-strategies": "^5.1.3",
+    "workbox-streams": "^5.1.3",
     "unstated-next": "^1.1.0"
   }
 }
