--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@types/animejs": "^3.1.2",
     "@types/axios": "^0.14.0",
     "@types/jest": "^26.0.20",
+    "@types/luxon": "^1.25.1",
     "@types/node": "^14.14.20",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
