--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   "scripts": {
     "start": "react-scripts start",
     "serve": "serve -s ./build",
+    "prebuild": "node ./scripts/prebuild.js",
     "build": "react-scripts build",
+    "postbuild": "node ./scripts/postbuild.js",
     "test": "react-scripts test",
     "lint": "eslint --ext .js,.jsx,.ts,.tsx src/",
     "lint:fix": "eslint --ext .js,.jsx,.ts,.tsx src/ --fix",
@@ -49,6 +51,8 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.7",
+    "@types/react-window": "^1.8.2",
+    "@types/react-virtualized-auto-sizer": "^1.0.0",
     "@typescript-eslint/eslint-plugin": "^2.24.0",
     "@typescript-eslint/parser": "^2.24.0",
     "cra-bundle-analyzer": "^0.1.0",
@@ -83,6 +87,8 @@
     "react-helmet": "^6.1.0",
     "react-i18next": "^11.8.5",
     "react-router-dom": "^5.2.0",
+    "react-window": "^1.8.6",
+    "react-virtualized-auto-sizer": "^1.0.4",
     "web-vitals": "^0.2.4",
     "workbox-background-sync": "^5.1.3",
     "workbox-broadcast-update": "^5.1.3",
