added showdown for discord markdown handling

--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@types/react-router-dom": "^5.1.7",
     "@types/react-window": "^1.8.2",
     "@types/react-virtualized-auto-sizer": "^1.0.0",
+    "@types/showdown": "^1.9.3",
     "@typescript-eslint/eslint-plugin": "^2.24.0",
     "@typescript-eslint/parser": "^2.24.0",
     "cra-bundle-analyzer": "^0.1.0",
@@ -74,6 +75,7 @@
     "animejs": "^3.2.1",
     "axios": "^0.21.1",
     "clsx": "^1.1.1",
+    "domhandler": "^4.0.0",
     "history": "^4.10.1",
     "i18next": "^19.8.4",
     "i18next-http-backend": "^1.0.21",
@@ -85,6 +87,7 @@
     "react-helmet": "^6.1.0",
     "react-i18next": "^11.8.5",
     "react-router-dom": "^5.2.0",
+    "react-showdown": "^2.1.0",
     "react-window": "^1.8.6",
     "react-virtualized-auto-sizer": "^1.0.4",
     "web-vitals": "^0.2.4",
