--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "@testing-library/jest-dom": "^5.11.8",
     "@testing-library/react": "^11.2.3",
     "animejs": "^3.2.1",
+    "async-mutex": "^0.3.0",
     "axios": "^0.21.1",
     "clsx": "^1.1.1",
     "domhandler": "^4.0.0",
