--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "lint:fix": "eslint --ext .js,.jsx,.ts,.tsx src/ --fix",
     "prettier": "prettier --write \"./src/**/*.{ts,tsx}\"",
     "profile": "npx cra-bundle-analyzer",
+    "preinstall": "node ./scripts/preinstall.js",
     "postinstall": "node ./scripts/postinstall.js"
   },
   "browserslist": {
@@ -67,6 +68,7 @@
     "typescript": "^4.1.3"
   },
   "dependencies": {
+    "@Floor-Gang/modmail-types": "^1.9.0",
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
@@ -82,7 +84,6 @@
     "i18next-http-backend": "^1.0.21",
     "lodash": "^4.17.20",
     "luxon": "^1.25.0",
-    "modmail-types": "github:Floor-Gang/modmail-types",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
