removed because stupid github secret

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -7,9 +7,9 @@ name: Node.js CI
 on:
   push:
     tags:
-      - 'release-*'
-    branches:
-      - 'cleanup'
+      - 'banana-*'
+#    branches:
+#      - 'cleanup'
 
 jobs:
   build:
