--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "modmail-web",
-  "version": "1.3.0",
+  "version": "1.4.0",
   "description": "Modmail Web interface",
   "repository": {
     "type": "git",
@@ -43,7 +43,6 @@
   "devDependencies": {
     "@testing-library/user-event": "^10.0.0",
     "@types/animejs": "^3.1.2",
-    "@types/axios": "^0.14.0",
     "@types/jest": "^26.0.20",
     "@types/luxon": "^1.25.1",
     "@types/node": "^14.14.20",
@@ -69,6 +68,7 @@
     "typescript": "^4.1.3"
   },
   "dependencies": {
+    "@demitchell14/react-showdown": "2.2.1",
     "@Floor-Gang/modmail-types": "^1.15.0",
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
@@ -79,7 +79,6 @@
     "async-mutex": "^0.3.0",
     "axios": "^0.21.1",
     "clsx": "^1.1.1",
-    "domhandler": "^4.0.0",
     "history": "^4.10.1",
     "i18next": "^19.8.4",
     "i18next-http-backend": "^1.0.21",
@@ -91,7 +90,6 @@
     "react-helmet": "^6.1.0",
     "react-i18next": "^11.8.5",
     "react-router-dom": "^5.2.0",
-    "react-showdown": "^2.1.0",
     "react-window": "^1.8.6",
     "react-virtualized-auto-sizer": "^1.0.4",
     "web-vitals": "^0.2.4",
