--- a/package.json
+++ b/package.json
@@ -105,6 +105,7 @@
     "workbox-routing": "^5.1.3",
     "workbox-strategies": "^5.1.3",
     "workbox-streams": "^5.1.3",
-    "unstated-next": "^1.1.0"
+    "unstated-next": "^1.1.0",
+    "url-pattern": "^1.0.3"
   }
 }
