--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "type": "git",
     "url": "https://github.com/NewCircuit/modmail-web"
   },
-  "homepage": "https://modmail.pewdiemc.com/",
+  "homepage": "https://newcircuit.io/",
   "author": "NewCircuit <https://github.com/NewCircuit>",
   "license": "GPL-3.0",
   "keywords": [
