--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "Modmail Web interface",
   "repository": {
     "type": "git",
-    "url": "https://github.com/NewCircuit/modmail-web"
+    "url": "https://github.com/fg-devs/modmail-web"
   },
-  "homepage": "https://github.com/fg-devs",
+  "homepage": "https://modmail.pewdiepie.com",
   "author": "Floor Gang Devs <https://github.com/fg-devs>",
   "license": "GPL-3.0",
   "keywords": [
@@ -49,8 +49,8 @@
     "@types/react-dom": "^17.0.0",
     "@types/react-helmet": "^6.1.0",
     "@types/react-router-dom": "^5.1.7",
-    "@types/react-window": "^1.8.2",
     "@types/react-virtualized-auto-sizer": "^1.0.0",
+    "@types/react-window": "^1.8.2",
     "@types/showdown": "^1.9.3",
     "@typescript-eslint/eslint-plugin": "^2.24.0",
     "@typescript-eslint/parser": "^2.24.0",
@@ -68,7 +68,7 @@
   },
   "dependencies": {
     "@demitchell14/react-showdown": "2.2.1",
-    "@NewCircuit/modmail-types": "^1.15.0",
+    "@fg-devs/modmail-types": "npm:@NewCircuit/modmail-types@^1.15.0",
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
@@ -89,8 +89,10 @@
     "react-helmet": "^6.1.0",
     "react-i18next": "^11.8.5",
     "react-router-dom": "^5.2.0",
-    "react-window": "^1.8.6",
     "react-virtualized-auto-sizer": "^1.0.6",
+    "react-window": "^1.8.6",
+    "unstated-next": "^1.1.0",
+    "url-pattern": "^1.0.3",
     "web-vitals": "^0.2.4",
     "workbox-background-sync": "^5.1.3",
     "workbox-broadcast-update": "^5.1.3",
@@ -103,8 +105,6 @@
     "workbox-range-requests": "^5.1.3",
     "workbox-routing": "^5.1.3",
     "workbox-strategies": "^5.1.3",
-    "workbox-streams": "^5.1.3",
-    "unstated-next": "^1.1.0",
-    "url-pattern": "^1.0.3"
+    "workbox-streams": "^5.1.3"
   }
 }
